--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>net.earthcomputer.multiconnect-intellij</id>
     <name>Multiconnect Development</name>
-    <vendor email="burtonjae@hotmail.co.uk" url="https://earthcomputer">Earthcomputer</vendor>
+    <vendor email="burtonjae@hotmail.co.uk" url="https://earthcomputer.net">Earthcomputer</vendor>
 
     <description><![CDATA[
     Plugin for Multiconnect development
@@ -11,6 +11,9 @@
     <depends>com.intellij.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <completion.confidence language="JAVA" implementationClass="net.earthcomputer.multiconnectintellij.MulticonnectCompletionConfidence" order="before javaSkipAutopopupInStrings"/>
+        <completion.contributor language="JAVA" implementationClass="net.earthcomputer.multiconnectintellij.MulticonnectCompletionContributor" order="last, before javaLegacy"/>
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="net.earthcomputer.multiconnectintellij.MessageVariantLineMarkerProvider"/>
+        <psi.referenceContributor language="JAVA" implementation="net.earthcomputer.multiconnectintellij.MulticonnectReferenceContributor"/>
     </extensions>
 </idea-plugin>
