--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,8 +16,10 @@
         <completion.contributor language="JAVA" implementationClass="net.earthcomputer.multiconnectintellij.MulticonnectCompletionContributor" order="last, before javaLegacy"/>
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="net.earthcomputer.multiconnectintellij.MessageVariantLineMarkerProvider"/>
         <fileType name="Multiconnect CSV File" implementationClass="net.earthcomputer.multiconnectintellij.csv.CsvFileType" fieldName="INSTANCE" language="MulticonnectCSV"/>
+        <lang.elementManipulator forClass="net.earthcomputer.multiconnectintellij.csv.psi.CsvStringValue" implementationClass="net.earthcomputer.multiconnectintellij.csv.psi.CsvStringValueManipulator"/>
         <lang.parserDefinition language="MulticonnectCSV" implementationClass="net.earthcomputer.multiconnectintellij.csv.CsvParserDefinition"/>
         <lang.syntaxHighlighterFactory language="MulticonnectCSV" implementationClass="net.earthcomputer.multiconnectintellij.csv.CsvSyntaxHighlighterFactory"/>
-        <psi.referenceContributor language="JAVA" implementation="net.earthcomputer.multiconnectintellij.MulticonnectReferenceContributor"/>
+        <psi.referenceContributor language="JAVA" implementation="net.earthcomputer.multiconnectintellij.MulticonnectJavaReferenceContributor"/>
+        <psi.referenceContributor language="MulticonnectCSV" implementation="net.earthcomputer.multiconnectintellij.csv.CsvReferenceContributor"/>
     </extensions>
 </idea-plugin>
