Add field access inspection

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -38,5 +38,12 @@
                          enabledByDefault="true"
                          level="ERROR"
                          implementationClass="net.earthcomputer.multiconnectintellij.inspection.NetworkEnumInspection"/>
+        <localInspection language="JAVA"
+                         displayName="Invalid message variant field modifiers"
+                         groupPath="Multiconnect"
+                         groupName="DSL"
+                         enabledByDefault="true"
+                         level="ERROR"
+                         implementationClass="net.earthcomputer.multiconnectintellij.inspection.MessageVariantFieldAccessInspection"/>
     </extensions>
 </idea-plugin>
